feat: set content-type & content-disposition headers